added blog pages

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -250,3 +250,13 @@ collections:
           - { name: title, label: Title }
           - { name: description, label: Description }
           - { name: keywords, label: Keywords, widget: list }
+  - label: SEO Blog Page
+    name: seoBlog
+    files:
+      - label: SEO Blog
+        name: seoBlog
+        file: 'src/data/seoBlog.md'
+        fields:
+          - { label: Title, name: title }
+          - { label: Description, name: description }
+          - { label: Keywords, name: keywords, widget: list }
