--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-remark-images": "^3.3.19",
+    "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-source-dribbble": "^2.1.3",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-source-git": "^1.1.0",
