--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.20",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-plugin-styled-components": "^3.3.1",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-remark-images": "^3.3.19",
