--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -245,9 +245,9 @@ collections:
     fields:
       - { name: title, label: Title }
       - { name: description, label: Description }
-      - { name: image, label: Image, widget: image }
+      - { name: image, label: Image, widget: image, required: false }
       - { name: theme, label: Theme }
-      - { name: categories, label: Categories, widget: list }
+      - { name: categories, label: Categories, widget: "select", options: ["mobileapp", "ui-ux", "websites"] }
       - label: Tags
         name: workTags
         widget: list
@@ -255,6 +255,20 @@ collections:
           - { name: title, label: Title }
           - { name: themeColor, label: Theme Color }
           - { name: themeBg, label: Theme Background }
+      - { name: type, label: Type, widget: "select", options: ["casestudy", "website"] }
+      - { name: pageLink, label: Page Link, required: false }
+      - { name: appLogo, label: App Logo, widget: image, required: false }
+      - { name: bannerImage, label: Banner Image, widget: image, required: false }
+      - { name: bannerBackgroundImage, label: Banner background Image, widget: image, required: false }
+      - label: Review
+        name: review
+        widget: object
+        required: false
+        fields:
+          - { label: Rating, name: rating, widget: "number", required: false, min: 1, max: 5 }
+          - { label: Comment, name: comment, required: false }
+          - { label: Username, name: username, required: false }
+      - { name: body, label: Body, widget: markdown, required: false }
       - label: SEO
         name: seo
         widget: object
