changed navlink color for blog view and works view page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,6 +58,7 @@ collections:
               - { label: ID, name: id, widget: number }
               - { label: Title, name: title }
               - { label: Description, name: description }
+              - { name: type, label: Type, widget: "select", options: ["casestudy", "website"] }
               - { label: Link, name: link }
               - { label: Image, name: image, widget: image }
       - label: SEO
