new changes done in blogs

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -103,7 +103,8 @@ collections:
       - { name: previewImages, label: Author Image, widget: image }
       - { name: author, label: Author }
       - { name: bio, label: Bio }
-      - { name: title, label: Title }
+      - { name: linkdin, label: Linkdin }
+      - { name: twitter, label: Twitter }
       - { name: date, label: Date, widget: date, default: ''}
       - { name: previewImage, label: Preview Image, widget: image }
       - { name: excerpt, label: Excerpt }
