--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -100,6 +100,7 @@ collections:
       depth: 100
       summary: '{{title}}'
     fields:
+      - { name: authImg, label: Preview Image, widget: image }
       - { name: author, label: Author }
       - { name: bio, label: Bio }
       - { name: title, label: Title }
