--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -100,7 +100,7 @@ collections:
       summary: '{{title}}'
     fields:
       - { name: author_image, label: Preview Image, widget: image }
-      - { name: profile_image, label: Profile Image, widget: image , default: src/data/blog/favicon.png }
+      - { name: profile_image, label: Profile Image, widget: image }
       - { name: author, label: Author }
       - { name: bio, label: Bio }
       - { name: title, label: Title }
